fix: the contrast on about page is not high enough

--- a/src/app/about/styles.module.scss
+++ b/src/app/about/styles.module.scss
@@ -67,11 +67,12 @@
 
 .introItem {
   padding: 120px 450px;
+  padding-top: 40px;
   object-fit: cover;
   object-position: center;
   width: 100%;
   height: auto;
-  background: linear-gradient(180deg, #1b1d1e 0%, #e4e4e1 100%);
+  // background: linear-gradient(180deg, #1b1d1e 0%, #e4e4e1 100%);
   h2 {
     font-size: 24px;
     font-weight: 400;
