--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -5,7 +5,7 @@
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
-  // font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, "Roboto", sans-serif;
 }
 
 html {
