--- a/src/components/ContactForm/styles.module.scss
+++ b/src/components/ContactForm/styles.module.scss
@@ -123,7 +123,7 @@
   width: 150px;
   height: 40px;
   font-size: 18px;
-  font-weight: 100;
+  font-weight: 400;
   border: 0;
   border-radius: 0;
   background-color: rgba(27, 29, 30, 0.8);
@@ -397,7 +397,7 @@
     width: 150px;
     height: 40px;
     font-size: 18px;
-    font-weight: 100;
+    font-weight: 400;
     border: 0;
     border-radius: 0;
     background-color: rgba(27, 29, 30, 0.8);
